--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<title>gh-pages template</title>
 </head>
 <body>
-  <div id="helloworld">Hello world!</div>
+  <div id="helloworld">hello you cumputa has a virus! please call us at microsoft at 1-800-not a scam-001 give me your money!
+	
+	All Jokes aside first test</div>
 </body>
 </html>
